# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================

ym_init_lua()


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( tests/programs )


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ${PROJECT_BINARY_DIR}/include
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  ${LUA_INCLUDE_DIR}
  )


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
#  ターゲットの設定
# ===================================================================
ym_add_object_library ( ym_luapp
  c++-srcs/Luapp.cc
  )

set ( YM_LIB_DEPENDS ${YM_LIB_DEPENDS} ${LUA_LIBRARIES} PARENT_SCOPE )
